[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "bluemap"
version = "1.0.0a1.dev1"
requires-python = ">=3.12"

authors = [{ name = "Blaumeis03", email = "dev@blaumeise03.de" }]
maintainers = [
    { name = "Blaumeis03", email = "dev@blaumeise03.de" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.setuptools]
packages = ["bluemap"]
ext-modules = [
    { name = "bluemap.stream", sources = [
        "bluemap/stream.pyx",
        "bluemap/stream.pxd",
    ] },
    { name = "bluemap._map", sources = [
        "bluemap/_map.pyx",
        "cpp/Image.cpp",
        "cpp/Map.cpp",
        "cpp/PyWrapper.cpp",
    ], include-dirs = [
        "cpp"
    ], language = "c++", extra-compile-args = [
        "-std=c++17",
    ], define-macros = [
        ["EVE_MAPPER_PYTHON", "1"]
    ] },
]

[project.scripts]
bluemap = "bluemap.main:main"